# Code-base

./: ProPrj_毕业项目_Alnes_watch_2025-08-21-21-25-53.epro  README.md
study_project/lock_study/: Makefile  condition_var.c  named_sem_no_unlink.c  rwlock_hungry_solved.c  rwlock_test.c  summary.txt  thread_pool_test.c  unnamed_sem_bin_process_condition.c  unnamed_sem_bin_thread.c  unnamed_sem_count_process.c  unnamed_sem_count_thread.c
study_project/opencv_study/Actual_combat/: CMakeCache.txt  CMakeLists.txt  Makefile  Multi-target_tracking.cpp  OpenCVExample  cmake_install.cmake  optical_flow_calculations.cpp  real-time_face_detection_copy.cpp  real-time_smile_detection.cpp  video_surveillance_and_motion_detection.cpp
study_project/opencv_study/image_processing/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCVExample  adaptive_thresholding.cpp  canny_edge_detection.cpp  cmake_install.cmake  contour_detection.cpp  corrosion_and_swelling.cpp  gaussian_filtering.cpp  mean_filtering.cpp  median_filtering.cpp  simple_thresholding.cpp
study_project/opencv_study/opencv_study_start_1/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCVExample  cmake_install.cmake  copying_and_cloning_of_images.cpp  cropping_and_scaling_of_images.cpp  geometric_transformations_of_images.cpp  image_color_space_conversion.cpp  image_properties.cpp  main.cpp  modify_the_pixels.cpp  read_show_image.cpp  save_image.cpp
study_project/socket_study/: Makefile  inet_endian_convert.c  multi_conn_processes_server.c  multi_conn_threads_server.c  single_conn_client.c  single_conn_server.c  udp_server.c
